--- a/package.json
+++ b/package.json
@@ -9,15 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "next": "14.1.0",
+    "particle-bg": "^0.5.0",
+    "particles-bg": "^2.5.5",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.1.0"
+    "react-parallax-tilt": "^1.7.210"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
     "eslint": "^8",
-    "eslint-config-next": "14.1.0"
+    "eslint-config-next": "14.1.0",
+    "postcss": "^8",
+    "tailwindcss": "^3.3.0"
   }
 }
