--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "knex": "^3.1.0",
     "next": "14.1.0",
+    "oracledb": "^6.3.0",
     "particle-bg": "^0.5.0",
     "particles-bg": "^2.5.5",
+    "pg": "^8.11.3",
+    "pg-query-stream": "^4.5.3",
     "react": "^18",
     "react-dom": "^18",
     "react-parallax-tilt": "^1.7.210"
