--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "pg-query-stream": "^4.5.3",
     "react": "^18",
     "react-dom": "^18",
-    "react-parallax-tilt": "^1.7.210"
+    "react-parallax-tilt": "^1.7.210",
+    "react-redux": "^9.1.0",
+    "redux": "^5.0.1",
+    "redux-logger": "^3.0.6"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
