--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     command: npx next dev
     working_dir: /usr/src/facebrain
     environment:
-      POSTGRES_URI: postgres://test:test@postgres:5432/facebrain
+      POSTGRES_URI: postgres://test:test@postgres:5432/facebrain-docker
     ports:
       - "3000:3000"
     volumes:
@@ -18,9 +18,9 @@ services:
     environment:
       POSTGRES_USER: test
       POSTGRES_PASSWORD: test
-      POSTGRES_DB: facebrain
+      POSTGRES_DB: facebrain-docker
       POSTGRES_HOST: postgres
     container_name: postgres
-    image: postgres
+    build: ./postgres
     ports:
       - "5432:5432"
