--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "jsonwebtoken": "^9.0.2",
     "knex": "^3.1.0",
     "next": "14.1.0",
     "oracledb": "^6.3.0",
