--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^18",
     "react-parallax-tilt": "^1.7.210",
     "react-redux": "^9.1.0",
+    "redis": "^2.8.0",
     "redux": "^5.0.1",
     "redux-logger": "^3.0.6"
   },
