--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "precommit": "pretty-quick --staged"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "husky": "^9.0.11",
     "jsonwebtoken": "^9.0.2",
     "knex": "^3.1.0",
     "next": "14.1.0",
@@ -18,6 +20,7 @@
     "particles-bg": "^2.5.5",
     "pg": "^8.11.3",
     "pg-query-stream": "^4.5.3",
+    "pretty-quick": "^4.0.0",
     "react": "^18",
     "react-dom": "^18",
     "react-parallax-tilt": "^1.7.210",
@@ -31,6 +34,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "postcss": "^8",
+    "prettier": "^3.2.5",
     "tailwindcss": "^3.3.0"
   }
 }
